更新k8s参数相关参数

--- a/roles/kubernetes/tasks/main.yaml
+++ b/roles/kubernetes/tasks/main.yaml
@@ -75,6 +75,13 @@
   file:
     path: /root/.kube
     state: absent
+# 创建需要的目录
+- name: create kubernetes manifests
+  file:
+    path: "{{ item }}"
+    state: directory
+  with_items:
+  - /etc/kubernetes/manifests
 
 - name: kubectl config init 
   block:
