--- a/roles/kubernetes/templates/kube-apiserver.service
+++ b/roles/kubernetes/templates/kube-apiserver.service
@@ -21,6 +21,8 @@ ExecStart=/opt/kubernetes/bin/kube-apiserver \
   --etcd-certfile=/opt/kubernetes/ssl/kubernetes.pem \
   --etcd-keyfile=/opt/kubernetes/ssl/kubernetes-key.pem \
   --etcd-servers=https://{{ etcd.split(',')[0] }}:2379,https://{{ etcd.split(',')[1] }}:2379,https://{{ etcd.split(',')[2] }}:2379 \
+  --kubelet-client-certificate=/opt/kubernetes/ssl/admin.pem \
+  --kubelet-client-key=/opt/kubernetes/ssl/admin-key.pem \
   --allow-privileged=true \
   --audit-log-maxage=30 \
   --audit-log-maxbackup=3 \
