--- a/roles/kubernetes/templates/kubelet.config.yaml
+++ b/roles/kubernetes/templates/kubelet.config.yaml
@@ -1,25 +1,24 @@
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
-#address: 0.0.0.0
 address: {{ inventory_hostname }}
-#authentication:
-#  anonymous:
-#    enabled: false
-#  webhook:
-#    cacheTTL: 2m0s
-#    enabled: true
-#  x509:
-#    clientCAFile: /etc/kubernetes/secret/certs/k8sca/k8sca.crt
-#authorization:
-#  mode: Webhook
-#  webhook:
-#    cacheAuthorizedTTL: 5m0s
-#    cacheUnauthorizedTTL: 30s
+authentication:
+  anonymous:
+    enabled: false
+  webhook:
+    cacheTTL: 2m0s
+    enabled: true
+  x509:
+    clientCAFile: /opt/kubernetes/ssl/ca.pem
+authorization:
+  mode: Webhook
+  webhook:
+    cacheAuthorizedTTL: 5m0s
+    cacheUnauthorizedTTL: 30s
 staticPodPath: /etc/kubernetes/manifests
 clusterDNS:
 - 10.1.0.2
 clusterDomain: cluster.local.
-#cgroupDriver: cgroupfs
+cgroupDriver: cgroupfs
 #cgroupsPerQOS: true
 #nodeLeaseDurationSeconds: 40
 #nodeStatusReportFrequency: 5s
@@ -50,8 +49,8 @@ port: 10250
 failSwapOn: true
 #fileCheckFrequency: 20s
 #hairpinMode: promiscuous-bridge
-#healthzBindAddress: 127.0.0.1
-#healthzPort: 10248
+healthzBindAddress: 127.0.0.1
+healthzPort: 10248
 #httpCheckFrequency: 20s
 #imageMinimumGCAge: 2m0s
 #iptablesDropBit: 15
